# tessera-crewai

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish-python.yml
tessera_crewai/: __init__.py  _config.py
tests/: test_config.py  test_e2e.py
